--- a/app-config.yaml
+++ b/app-config.yaml
@@ -1,17 +1,20 @@
+AUTH_GITHUB_CLIENT_ID: f8caefde27e2f6bba85e
+AUTH_GITHUB_CLIENT_SECRET: 31654005f9159ce539c46685d8ae7d5bf4f911be 
+
 app:
-  title: Scaffolded Backstage App
+  title: EcoOnline
   baseUrl: http://localhost:3000
 
 organization:
-  name: My Company
+  name: EcoOnline
 
 backend:
   # Used for enabling authentication, secret is shared by all backend plugins
   # See https://backstage.io/docs/tutorials/backend-to-backend-auth for
   # information on the format
-  # auth:
-  #   keys:
-  #     - secret: ${BACKEND_SECRET}
+  auth:
+    # keys:
+    #   - secret: ${BACKEND_SECRET}
   baseUrl: http://localhost:7007
   listen:
     port: 7007
@@ -28,8 +31,21 @@ backend:
   # This is for local development only, it is not recommended to use this in production
   # The production database configuration is stored in app-config.production.yaml
   database:
-    client: better-sqlite3
-    connection: ':memory:'
+    client: pg
+    connection:
+      host: ${POSTGRES_HOST}
+      port: ${POSTGRES_PORT}
+      user: ${POSTGRES_USER}
+      password: ${POSTGRES_PASSWORD}
+      # https://node-postgres.com/features/ssl
+      # you can set the sslmode configuration option via the `PGSSLMODE` environment variable
+      # see https://www.postgresql.org/docs/current/libpq-ssl.html Table 33.1. SSL Mode Descriptions (e.g. require)
+      # ssl:
+      #   ca: # if you have a CA file and want to verify it you can uncomment this section
+      #     $file: <file-path>/ca/server.crt
+  reading:
+    allow:
+      - host: '*.ecoonline.net'
   cache:
     store: memory
   # workingDirectory: /tmp # Use this to configure a working directory for the scaffolder, defaults to the OS temp-dir
@@ -57,13 +73,18 @@ proxy:
 techdocs:
   builder: 'local' # Alternatives - 'external'
   generator:
-    runIn: 'docker' # Alternatives - 'local'
+    runIn: 'local' # Alternatives - 'local' -docker if we want the files to be stored in a docker container
   publisher:
     type: 'local' # Alternatives - 'googleGcs' or 'awsS3'. Read documentation for using alternatives.
 
 auth:
   # see https://backstage.io/docs/auth/ to learn about auth providers
-  providers: {}
+  # 1c2Dvk0Ba1nawzmxZgW165DA
+  providers:
+    github:
+      development:
+        clientId: f8caefde27e2f6bba85e
+        clientSecret: 31654005f9159ce539c46685d8ae7d5bf4f911be
 
 scaffolder:
   # see https://backstage.io/docs/features/software-templates/configuration for software template options
@@ -91,11 +112,11 @@ catalog:
       rules:
         - allow: [User, Group]
 
-    ## Uncomment these lines to add more example data
+    # # Uncomment these lines to add more example data
     # - type: url
     #   target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/all.yaml
 
-    ## Uncomment these lines to add an example org
+    # # Uncomment these lines to add an example org
     # - type: url
     #   target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/acme-corp.yaml
     #   rules:
