--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -45,6 +45,9 @@
     "@backstage/theme": "^0.2.16",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
+    "@roadiehq/backstage-plugin-datadog": "^2.1.2",
+    "@roadiehq/backstage-plugin-github-pull-requests": "^2.4.2",
+    "@roadiehq/backstage-plugin-jira": "^2.3.2",
     "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
